Bug 1342843 - Enable CrossProcessSemaphore on all BSDs. r=mattwoodrow

MozReview-Commit-ID: AawHoWsctp2

--HG--
extra : rebase_source : 73eeb995d6529b2c76f8ad35e8602537fbc6021e